# elab_emisti

./: .env.template  .gitignore  README.md  build.sh  config.py  config.py.espo  main.py  projects.yaml  pyproject.toml
input/: iscrizioni.txt
src/elab_emisti/: main.py
